RESOLVED FIXED59990
[GTK][WebKit2] GTK+ 2.x widget rendering fails after r85480
https://bugs.webkit.org/show_bug.cgi?id=59990
Summary [GTK][WebKit2] GTK+ 2.x widget rendering fails after r85480
Martin Robinson
Reported 2011-05-02 17:57:14 PDT
It seems the issue here is that there are two situations that are no longer handled by the code grabbing the drawable size: 1. When the drawable is null. 2. When the drawable is in fact a GdkPixmap. For the time being this diables the sanity check for WebKit2, but we can wait to add support for that when we decide whether or not to drop GTK+ 2.x support for WebKit2.
Attachments
Patch (4.16 KB, patch)
2011-05-02 17:59 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-05-02 17:59:23 PDT
Martin Robinson
Comment 2 2011-05-02 17:59:51 PDT
Style bot: We have to keep the parameter name because this header is used in C code.
WebKit Review Bot
Comment 3 2011-05-02 18:02:10 PDT
Attachment 92019 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/gtk/GtkVersioning.h:38: The parameter name "drawable" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xan Lopez
Comment 4 2011-05-09 12:34:06 PDT
Comment on attachment 92019 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=92019&action=review > Source/WebCore/platform/gtk/GtkVersioning.c:267 > + g_assert(GDK_IS_PIXMAP(drawable) || GDK_IS_WINDOW(drawable)); This will crash in release builds, so better change it for g_return_if_fail.
Martin Robinson
Comment 5 2011-05-10 12:37:37 PDT
Note You need to log in before you can comment on or make changes to this bug.