2011-05-10  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK][WebKit2] GTK+ 2.x widget rendering fails after r85480
        https://bugs.webkit.org/show_bug.cgi?id=59990

        No new tests. This is covered by existing pixel tests.

        * platform/gtk/GtkVersioning.c:
        (getGdkDrawableSize): Added this helper method.
        * platform/gtk/GtkVersioning.h: Added helper method declaration.
        * platform/gtk/WidgetRenderingContext.cpp:
        (WebCore::WidgetRenderingContext::WidgetRenderingContext): Call into the helper if
        there is actually a GdkDrawable. If not, disable the sanity check.

Canonical link: https://commits.webkit.org/75839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86178 268f45cc-cd09-0410-ab3c-d52691b4dbfc